--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "bin": "./dist/index.js",
   "packageManager": "yarn@3.1.1",
   "scripts": {
-    "build": "tsc --project ./tsconfig.json",
+    "build": "webpack --mode production",
     "start": "webpack --watch --mode development"
   },
   "devDependencies": {
