--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
-  "name": "skynet",
+  "name": "@ulises-codes/skynet",
+  "author": {
+    "name": "Ulises Himely"
+  },
   "bin": "./dist/index.js",
   "packageManager": "yarn@3.1.1",
+  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ulises-codes/skynet.git"
+  },
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack --watch --mode development"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
