--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "author": {
     "name": "Ulises Himely"
   },
-  "bin": {
-    "skynet": "dist/index.js"
-  },
+  "bin": "dist/index.js",
   "packageManager": "yarn@3.1.1",
   "version": "0.0.2",
   "repository": {
